# VanillaMinimapTracking

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
MinimapBlips/: .luarc.json  MinimapBlips.lua  MinimapBlips.toc  MinimapBlipsMenu.lua
MinimapBlips/icons/: TargetHostile.blp
cmake/: embed_addon.cmake
src/: Blips.cpp  Blips.h  Common.cpp  Common.h  DllMain.cpp  Game.cpp  Game.h  Offsets.h
src/addons/: Embedded.cpp  Embedded.h
src/event/: Custom.cpp  Custom.h
